# octoai-textgen-cookbook

./: .gitignore  LICENSE  README.md
DocTalk/: .gitignore
DocTalk/app/: samconfig.toml
choose_your_own_adventure/: README.md  adventure.py  requirements.txt
doctalk/: .gitignore  README.md  api-gateway.py  requirements.txt
doctalk/1_vector_db/: init_vectordb.py
doctalk/3_lambda/: api-gateway.py  template.yaml
doctalk/4_frontend/: README.md
doctalk/app/: Dockerfile
doctalk/aws_lambda/: Dockerfile  api-gateway.py
doctalk/backend/: README.md
doctalk/frontend/: README.md  package.json  tailwind.config.ts  tsconfig.json
doctalk/langchain/: .env  main.py
doctalk/nextjs/: .eslintrc  .npmrc  .prettierrc  README.md  declarations.d.ts  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
doctalk/vector_db/: .env  init_vectordb.py  list_urls.py
e-commerce/: .env-example  README.md  main.py  pyproject.toml
examples/DocTalk/: README.md
examples/octofridge/: README.md  octofridge.py
examples/simple_chat/: README.md  chat.py
examples/turn_by_turn_adventure/: README.md  adventure.py
function_calling_cx_agent/: .env.sample  .gitignore  README.md  pyproject.toml
function_calling_cx_agent/function_calling_cx_agent/: agent.py
langchain/: README.md  agent.py  embeddings.py  llm.py  pyproject.toml  tool.py
llama31_tools/: README.md  llama31_tools.ipynb
llama31_tools_typescript/: README.md  main.ts  package.json
llama_builtin_tools/: README.md  llama_built_in.ipynb  requirements.txt  tools.py
llama_index/: embeddings.py  llm.py  requirements.txt
llama_index/react_agent/: README.md  main-like.py  main.py  octo.py  pyproject.toml  test_emb.py
llama_index/react_agent/tools/: guidelines.py  report_generator.py  web_reader.py
llama_index/simple/: README.md
llama_index/simple-agents/: README.md  built-in-tools.py  custom-tools.py  pyproject.toml
natural_language_query_engine/: README.md  main.py  requirements.txt  travel_assistant.py
natural_language_query_engine/config/: constants.py
natural_language_query_engine/resources/: collection_schemas.json
natural_language_query_engine/services/: db_client.py  nlq_engine.py
octoai_openpipe_finetuning_for_toxicity_detection/: .env.example  README.md  collect_classify_toxic_text.py  eval_outputs.jsonl  evaluate_classify_toxic_text.py  outputs.jsonl  patch_openai_w_openpipe.py  requirements.txt
octoai_structured_generation/: .env.sample  README.md  benchmark.py  json_mode.py  no_json_mode.py  requirements.txt
octoai_summarization_methods_comparison/: .env.example  README.md  summarization_methods_app.py
octoai_text_summarization_methods/: .env.example  README.md  requirements.txt  summarization_methods_app.py
octoai_vs_openai_cost_diff_app/: README.md  contract_summarizer_harness.py  requirements.txt
opeanai_ts_sdk/: README.md  package.json  simple-tool-call.ts  test-basic.ts  utils.ts
pdf-summarizer-next/: README.md  package.json
pdf_summarizer/: .env.example  LICENSE  README.md  old.js
pdf_summarizer/nextjs/: package-lock.json
pdf_summarizer/nodejs/: .gitignore  index.js  package-lock.json  package.json
recipe_generator/: .env  README.md  recipe_generator.py  requirements.txt
similarity_search/: requirements.txt  similarity_search.py
simple_chat/: .env  README.md  chat.py  requirements.txt
simple_migration/: README.md  embedding.py  environment.sh  llm.py  response.py
(+75 files in other folders)
