[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Pedro Torruella <5025399+ptorru@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.55"
llama-index-llms-openai = "^0.1.25"
llama-index-readers-web = "^0.1.23"
llama-index-readers-file = "^0.1.30"
python-dotenv = "^1.0.1"
pypandoc = "^1.13"
llama-index-llms-octoai = "^0.1.0"
llama-index-llms-openai-like = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
